Add basic upstream tag parsing

--- a/samples/keystone.yaml
+++ b/samples/keystone.yaml
@@ -3,11 +3,17 @@ version: 2014.1
 
 upstreams:
   rpm:
-    url: 'https://repos.fedorapeople.org/repos/openstack/openstack-icehouse/epel-6/openstack-keystone-2014.1.2.1-1.el6.src.rpm'
+    #url: 'https://repos.fedorapeople.org/repos/openstack/openstack-icehouse/epel-6/openstack-keystone-2014.1.2.1-1.el6.src.rpm'
+    path: '/root/keystone/openstack-keystone-2014.1.2.1-1.el6.noarch.rpm'
   extract:
+    - 'tags'
     - 'dependencies'
     - 'init_scripts'
-    - 'package_scripts'
+    - 'package_scripts':
+      - preinstall
+      - postinstall
+      - preuninstall
+      - postuninstall
     - paths:
       - 'etc'
 
